--- a/index.html
+++ b/index.html
@@ -6,250 +6,102 @@
     <title>Financial Insight Wizard</title>
     <style>
         body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            font-family: 'Arial', sans-serif;
             line-height: 1.6;
             color: #333;
-            background-color: #f4f4f4;
+            background-color: #f4f7f9;
             margin: 0;
-            padding: 0;
+            padding: 20px;
         }
         .container {
-            max-width: 900px;
+            max-width: 800px;
             margin: 0 auto;
-            padding: 20px;
-            background-color: white;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            background-color: #ffffff;
             border-radius: 8px;
-            margin-top: 50px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            padding: 30px;
         }
-        h1, h2, h3 {
-            color: #007AFF;
+        h1 {
+            color: #2c3e50;
+            margin-bottom: 20px;
+            text-align: center;
         }
-        .input-section, .clarification-section {
+        .input-group {
             margin-bottom: 20px;
         }
-        #pasteInput, #clarificationInput {
+        label {
+            display: block;
+            margin-bottom: 5px;
+            font-weight: bold;
+        }
+        input[type="file"], textarea {
             width: 100%;
-            height: 150px;
             padding: 10px;
             border: 1px solid #ddd;
             border-radius: 4px;
-            font-size: 14px;
+            font-size: 16px;
         }
-        #analyzeBtn, #clarifyBtn {
-            background-color: #007AFF;
+        textarea {
+            min-height: 100px;
+            resize: vertical;
+        }
+        button {
+            background-color: #3498db;
             color: white;
             border: none;
             padding: 10px 20px;
             font-size: 16px;
-            border-radius: 20px;
+            border-radius: 4px;
             cursor: pointer;
             transition: background-color 0.3s ease;
         }
-        #analyzeBtn:hover, #clarifyBtn:hover {
-            background-color: #0056b3;
+        button:hover {
+            background-color: #2980b9;
         }
-        #result, #clarificationQuestions {
-            margin-top: 30px;
-        }
-        table {
-            width: 100%;
-            border-collapse: collapse;
+        #clarificationQuestions, #result, #commentary {
             margin-top: 20px;
+            background-color: #ecf0f1;
+            padding: 15px;
+            border-radius: 4px;
         }
-        th, td {
-            border: 1px solid #ddd;
-            padding: 8px;
-            text-align: left;
-        }
-        th {
-            background-color: #f2f2f2;
-            font-weight: bold;
-        }
-        tr:nth-child(even) {
-            background-color: #f9f9f9;
+        #commentary h2 {
+            color: #2c3e50;
+            margin-top: 0;
         }
     </style>
 </head>
 <body>
     <div class="container">
         <h1>Financial Insight Wizard</h1>
-        <p>Paste your spending data below and let's analyze it together!</p>
-        <div class="input-section">
-            <textarea id="pasteInput" placeholder="Paste your spending data here. We'll help you clarify any ambiguities."></textarea>
+
+        <div class="input-group">
+            <label for="fileUpload">Upload your spending data file:</label>
+            <input type="file" id="fileUpload" accept=".csv,.txt">
         </div>
-        <button id="analyzeBtn">Start Analysis</button>
+
+        <div class="input-group">
+            <label for="dataInput">Or paste your spending data here:</label>
+            <textarea id="dataInput" placeholder="Paste your spending data here"></textarea>
+        </div>
+
+        <button id="startAnalysis">Start Analysis</button>
+
         <div id="clarificationQuestions"></div>
-        <div class="clarification-section" style="display: none;">
-            <textarea id="clarificationInput" placeholder="Please provide clarifications here..."></textarea>
-            <button id="clarifyBtn">Submit Clarifications</button>
+
+        <div id="clarificationSection" style="display: none;">
+            <button id="submitClarifications">Submit Clarifications</button>
         </div>
+
         <div id="result"></div>
+
+        <div id="commentary">
+            <h2>Analysis Commentary</h2>
+            <p id="commentaryText"></p>
+        </div>
     </div>
 
     <script>
-        const pasteInput = document.getElementById('pasteInput');
-        const analyzeBtn = document.getElementById('analyzeBtn');
-        const clarificationQuestions = document.getElementById('clarificationQuestions');
-        const clarificationSection = document.querySelector('.clarification-section');
-        const clarificationInput = document.getElementById('clarificationInput');
-        const clarifyBtn = document.getElementById('clarifyBtn');
-        const result = document.getElementById('result');
-
-        let parsedData = [];
-
-        analyzeBtn.addEventListener('click', () => {
-            const content = pasteInput.value;
-            if (content.trim() === '') {
-                result.innerHTML = '<p>Please paste some spending data first.</p>';
-                return;
-            }
-            parsedData = parseSpendingData(content);
-            const questions = generateClarificationQuestions(parsedData);
-            displayClarificationQuestions(questions);
-        });
-
-        clarifyBtn.addEventListener('click', () => {
-            const clarifications = clarificationInput.value;
-            const updatedData = applyClarifications(parsedData, clarifications);
-            const analysis = analyzeSpending(updatedData);
-            displayResult(analysis);
-        });
-
-        function parseSpendingData(content) {
-            const lines = content.split('\n');
-            const data = [];
-            let currentCategory = '';
-
-            lines.forEach(line => {
-                const trimmedLine = line.trim();
-                if (trimmedLine === '') return;
-
-                if (trimmedLine.toLowerCase().includes('spending') || trimmedLine.toLowerCase().includes('salary')) {
-                    currentCategory = trimmedLine;
-                } else {
-                    const match = trimmedLine.match(/^([\d.k]+)\s+(.+)$|^(.+?)\s*[:\-=]\s*([\d.k]+)$/i);
-                    if (match) {
-                        const [, amount1, description1, description2, amount2] = match;
-                        const description = description1 || description2;
-                        const amountStr = amount1 || amount2;
-                        const amount = parseFloat(amountStr.replace('k', '')) * (amountStr.toLowerCase().includes('k') ? 1000 : 1);
-                        data.push({ category: currentCategory, description, amount });
-                    }
-                }
-            });
-
-            return data;
-        }
-
-        function generateClarificationQuestions(data) {
-            const questions = [];
-            const categories = new Set(data.map(item => item.category));
-            
-            if (categories.size > 1) {
-                questions.push("You have multiple categories (e.g., 'dec spending', 'dec salary left'). Should we analyze these separately or combine them?");
-            }
-
-            const uniqueDescriptions = new Set(data.map(item => item.description.toLowerCase()));
-            if (uniqueDescriptions.has('50 cent')) {
-                questions.push("There's an entry for '50 cent'. Is this entertainment-related or something else?");
-            }
-
-            if (uniqueDescriptions.has('weedzilla') && uniqueDescriptions.has('weed')) {
-                questions.push("There are entries for both 'Weedzilla' and 'Weed'. Are these the same category or different?");
-            }
-
-            if (uniqueDescriptions.has('japan')) {
-                questions.push("There's an entry for 'Japan (planet top up)'. Is this travel-related or some form of online service?");
-            }
-
-            const totalExpenses = data.reduce((sum, item) => sum + item.amount, 0);
-            const balance = data.find(item => item.description.toLowerCase().includes('balance'))?.amount || 0;
-            if (totalExpenses > balance) {
-                questions.push(`Your total expenses (${totalExpenses.toFixed(2)} THB) exceed the mentioned balance (${balance.toFixed(2)} THB). Should we consider any additional income or savings in the analysis?`);
-            }
-
-            return questions;
-        }
-
-        function displayClarificationQuestions(questions) {
-            if (questions.length === 0) {
-                const analysis = analyzeSpending(parsedData);
-                displayResult(analysis);
-                return;
-            }
-
-            let html = '<h2>Please Clarify:</h2><ol>';
-            questions.forEach(question => {
-                html += `<li>${question}</li>`;
-            });
-            html += '</ol><p>Please provide your clarifications in the text area below:</p>';
-
-            clarificationQuestions.innerHTML = html;
-            clarificationSection.style.display = 'block';
-        }
-
-        function applyClarifications(data, clarifications) {
-            // Here you would implement logic to update the data based on user clarifications
-            // For now, we'll just return the original data
-            return data;
-        }
-
-        function analyzeSpending(data) {
-            let totalSpending = 0;
-            const categories = {};
-
-            data.forEach(item => {
-                if (item.amount > 0 && !item.description.toLowerCase().includes('balance')) {
-                    totalSpending += item.amount;
-                    categories[item.description] = (categories[item.description] || 0) + item.amount;
-                }
-            });
-
-            const sortedCategories = Object.entries(categories).sort((a, b) => b[1] - a[1]);
-            const topCategories = sortedCategories.slice(0, 5);
-            const bottomCategories = sortedCategories.slice(-3);
-
-            return {
-                totalSpending,
-                categories: sortedCategories,
-                topCategories,
-                bottomCategories,
-                uniqueCategoriesCount: sortedCategories.length
-            };
-        }
-
-        function displayResult(analysis) {
-            const formatCurrency = (amount) => `฿${amount.toLocaleString('en-US', {minimumFractionDigits: 2, maximumFractionDigits: 2})}`;
-            
-            let html = `
-                <h2>Your Financial Breakdown</h2>
-                <p>Total Spending: <strong>${formatCurrency(analysis.totalSpending)}</strong></p>
-                <p>Number of Spending Categories: <strong>${analysis.uniqueCategoriesCount}</strong></p>
-
-                <h3>All Spending Categories</h3>
-                <table>
-                    <thead>
-                        <tr>
-                            <th>Category</th>
-                            <th>Amount Spent</th>
-                            <th>Percentage of Total</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        ${analysis.categories.map(([category, amount]) => `
-                            <tr>
-                                <td>${category}</td>
-                                <td>${formatCurrency(amount)}</td>
-                                <td>${((amount / analysis.totalSpending) * 100).toFixed(2)}%</td>
-                            </tr>
-                        `).join('')}
-                    </tbody>
-                </table>
-            `;
-
-            result.innerHTML = html;
-        }
+        // Add your JavaScript code here to handle file upload, data processing, and commentary generation
     </script>
 </body>
 </html>
